# teora

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build_tools/cmake/: find_qt6_libs.cmake  suplementary_functions.cmake
build_tools/scripts/: copy_qt6_libs_to_build.py  copy_qt6_platforms_to_build.py  copy_utils.py
source/: CMakeLists.txt  main.cpp
source/core/: core_disk_file_reader.cpp  core_disk_file_reader.hpp
source/gui/: gui_main_window.cpp  gui_main_window.hpp  gui_main_window_status_bar.cpp  gui_main_window_status_bar.hpp  gui_text_edit_widget.cpp  gui_text_edit_widget.hpp
source/utils/: utl_message_box.hpp  utl_suplementary_widget_functions.hpp
